<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="availableBalance"
            type="String"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:context=".transfer.TransferActivity">
        <TextView
            android:id="@+id/accountBalanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:text='@{availableBalance}'
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:textSize="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--
            <TextView
                android:id="@+id/enterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/enter_deposit_amount"
                android:fontFamily="sans-serif-black"
                android:textSize="17dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountBalanceTextView" />
        -->

        <EditText
            android:id="@+id/enterDepositEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_deposit_amount"
            android:fontFamily="sans-serif-black"
            android:textSize="17dp"
            android:maxLength="7"
            android:inputType="number"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountBalanceTextView"></EditText>

        <Button
            android:id="@+id/depositButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/deposit"
            android:fontFamily="sans-serif-black"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountBalanceTextView"></Button>


        <EditText
            android:id="@+id/enterWithdrawEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_withdraw_amount"
            android:inputType="number"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:textSize="17dp"
            android:maxLength="7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterDepositEditText"></EditText>

        <Button
            android:id="@+id/withdrawButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/withdraw"
            android:fontFamily="sans-serif-black"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterDepositEditText"></Button>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_transaction"
            android:fontFamily="sans-serif-black"
            android:textSize="17dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterWithdrawEditText"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>